# Hachizumi-chat

./: .env.example  .gitignore  Modelfile  README.md  hfd.sh  pyproject.toml
dataset/: 恋爱我借走了_ks.py
scripts/: enhance_data.sh  eval_hasumi.py  export_gguf.sh  run_data_pipeline.sh  run_data_pipeline_skip_api.sh  run_dpo.sh  run_sft.sh  start_vllm.sh  test_style.py  test_style_long.py  test_style_temp.py  test_style_v2.py  test_style_v3.py  test_vllm.sh  upload_models_to_modelscope.sh  upload_to_modelscope.py
self-files/: DESIGN.md  STYLE_IMPROVEMENT_PLAN.md  STYLE_TUNING_PLAN.md
src/data_process/: api_client.py  build_dpo_dataset.py  build_sft_dataset.py  character_card_builder.py  config.py  enhance_dataset.py  llm_client.py  nsfw_filter.py  parse_scenario.py  run_all.py  style_clean.py  style_enhance.py  style_templates.py  utils.py  validate_outputs.py  validators.py
src/training/: __init__.py  data_utils.py  dpo_unsloth.py  gpu_utils.py  merge_and_export.py  sft_unsloth.py
