[project]
name = "hachizumi-chat"
version = "0.1.0"
description = "天满八纯角色扮演 LLM 数据构建与微调项目"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
py-modules = []
