[project]
name = "hachizumi-chat"
version = "0.1.0"
description = "天满八纯角色扮演 LLM 数据构建与微调项目"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "jieba>=0.42.1",
    "unsloth>=2025.0.0",
    "transformers>=4.45.0",
    "trl>=0.11.0",
    "peft>=0.12.0",
    "datasets>=3.0.0",
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.24.0",
    "einops>=0.8.0",
    "nvidia-ml-py>=12.535.108",
    "modelscope>=1.18.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
py-modules = []
